Updated library dependencies for graph viewer

--- a/org.modelica.mdt.ui/build.properties
+++ b/org.modelica.mdt.ui/build.properties
@@ -5,4 +5,7 @@ bin.includes = META-INF/,\
                plugin.xml,\
                doc/,\
                icons/,\
-               lib/
+               lib/,\
+               lib/org.eclipse.draw2d_3.8.1.201208200205.jar,\
+               lib/org.eclipse.zest.core_1.3.0.201208200205.jar,\
+               lib/org.eclipse.zest.layouts_1.1.0.201208200205.jar
