BUG FIX: report generator (getAllFoundRequirements issue)

--- a/modelicaml/org.openmodelica.modelicaml.helper/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.helper/build.properties
@@ -4,4 +4,7 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               sources/
+               sources/,\
+               libs/,\
+               libs/owlapi-bin.jar
+src.includes = libs/
