BUG FIX: report generation (allFoundScenarios issue) BUG FIX: invocation of OMC NEW: OWL report files generation (using OWLAPI)

--- a/modelicaml/org.openmodelica.modelicaml.helper/build.properties
+++ b/modelicaml/org.openmodelica.modelicaml.helper/build.properties
@@ -6,5 +6,5 @@ bin.includes = META-INF/,\
                icons/,\
                sources/,\
                libs/,\
-               libs/owlapi-bin.jar
+               libs/HermiT.jar
 src.includes = libs/
