BUG FIX: verification report generation (not violated and not evaluated requirements issues) BUG FIX: OMC launching for design verification helper NEW: preference page for design verification 	- values for "violated", "not violated", "not evaluated" 	- opt. to always copy sim. files 	- opt. for generating OWL report files SPELLING CORRECTED: in the feature texts

--- a/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.preferences/plugin.xml
@@ -28,6 +28,12 @@
       </page>
       <page
             category="org.openmodelica.modelicaml.preferences.mainpage"
+            class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLDesignVerificationPage"
+            id="org.openmodelica.modelicaml.preferences.designVerification"
+            name="Design Verification Settings">
+      </page>
+      <page
+            category="org.openmodelica.modelicaml.preferences.mainpage"
             class="org.openmodelica.modelicaml.preferences.impl.ModelicaMLModelicaModelsSynchronization"
             id="org.openmodelica.modelicaml.preferences.ModelicaMLModelicaModelsSynchronization"
             name="Modelica Model Synchronization Settings">
