MOD: ModelicaML profile, ModelicaMLStateMachine stereotype now includes properties for addition code, sampling and freeze expressions
ADDED: editors for state machine addition code, sampling and freeze expressions

--- a/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
+++ b/modelicaml/org.openmodelica.modelicaml.gen.modelica/src/ModelicaML_config.properties
@@ -125,8 +125,12 @@ s_if = If
 s_when = When
 	### ModelicaML specific
 s_modelicaStateMachine = ModelicaMLStateMachine
-	## ModelicaML specific: ModelicaMLStateMachine
+	## ModelicaML specific: State Machine (additional code that will be put into the same alg. section as the State Machine code)
+s_p_additionalCode = additionalCode
+	## ModelicaML specific: ModelicaMLStateMachine sampling expression
 s_p_samplingExpression = samplingExpression
+	## ModelicaML specific: ModelicaMLStateMachine freeze expression (same name as "s_p_freezeExpression" below for state)
+#s_p_freezeExpression = freezeExpression
 	### ModelicaML specific END
 s_stateDependency = StateDependency
 s_conditionalEquation = ConditionalEquations(Diagram)
@@ -146,8 +150,8 @@ s_p_suppressEntryActions = suppressEntryActions
 s_StateSpecification = StateSpecification
 s_p_freezeExpression = freezeExpression
 	## ModelicaML specific: AdditionalIncludes
-s_AdditionalIncludes = AdditionalIncludes
-s_p_additionalActionCode = additionalActionCode
+##OBSOLETE: s_AdditionalIncludes = AdditionalIncludes
+##OBSOLETE: s_p_additionalActionCode = additionalActionCode
 	## ModelicaML specific END
 	## ModelicaML specific: ControlFlowSpecification
 s_p_priority = priority
