--- a/modelicaml/org.openmodelica.modelicaml.profile/plugin.properties
+++ b/modelicaml/org.openmodelica.modelicaml.profile/plugin.properties
@@ -129,8 +129,12 @@ s_if = If
 s_when = When
 	### ModelicaML specific
 s_modelicaStateMachine = ModelicaMLStateMachine
-	## ModelicaML specific: ModelicaMLStateMachine
+	## ModelicaML specific: State Machine (additional code that will be put into the same alg. section as the State Machine code)
+s_p_additionalCode = additionalCode
+	## ModelicaML specific: ModelicaMLStateMachine sampling expression
 s_p_samplingExpression = samplingExpression
+	## ModelicaML specific: ModelicaMLStateMachine freeze expression (same name as "s_p_freezeExpression" below for state)
+#s_p_freezeExpression = freezeExpression
 	### ModelicaML specific END
 s_stateDependency = StateDependency
 s_conditionalEquation = ConditionalEquations(Diagram)
@@ -150,8 +154,8 @@ s_p_suppressEntryActions = suppressEntryActions
 s_StateSpecification = StateSpecification
 s_p_freezeExpression = freezeExpression
 	## ModelicaML specific: AdditionalIncludes
-s_AdditionalIncludes = AdditionalIncludes
-s_p_additionalActionCode = additionalActionCode
+##OBSOLETE: s_AdditionalIncludes = AdditionalIncludes
+##OBSOLETE: s_p_additionalActionCode = additionalActionCode
 	## ModelicaML specific END
 	## ModelicaML specific: ControlFlowSpecification
 s_p_priority = priority
@@ -177,4 +181,5 @@ s_annotation = Annotation
 
 s_annotation_icon = Annotation(Icon)
 s_p_iconAnnotationString = iconAnnotationString
+
 
