--- a/org.modelica.mdt.ui/plugin.xml
+++ b/org.modelica.mdt.ui/plugin.xml
@@ -163,11 +163,6 @@
          name="Toggle Mark Occurrences">
          <!--<state class="org.eclipse.ui.handlers.RegistryToggleState:false" id="org.eclipse.ui.commands.toggleState"></state>-->
    </command>
-   <command
-         defaultHandler="org.modelica.mdt.ui.actions.ModelicaCreateView"
-         id="org.modelica.mdt.ui.actions.CreateView"
-         name="Create View">
-   </command>
    </extension>
    
    <extension point="org.eclipse.ui.bindings">   
@@ -383,5 +378,24 @@
            </command>
         </toolbar>
      </menuContribution>
+  </extension>
+  <extension
+        point="org.eclipse.ui.menus">
+        <menuContribution locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+        	<command 
+        		commandId="org.modelica.mdt.ui.actions.commandgraphopener"
+        		icon="icons/obj16/mo_file.gif"
+        		label="Generate Graph View"
+        		style="push">
+        	</command>
+        </menuContribution>
+  </extension>
+  <extension
+        point="org.eclipse.ui.commands">
+       <command 
+        	defaultHandler="org.modelica.mdt.ui.actions.GraphHandler"
+			id="org.modelica.mdt.ui.actions.commandgraphopener"
+			name="Generate">
+        </command>
   </extension>
 </plugin>
