--- a/modelicaml/org.openmodelica.modelicaml.validation/plugin.xml
+++ b/modelicaml/org.openmodelica.modelicaml.validation/plugin.xml
@@ -534,6 +534,32 @@
                   C47 {0}
                </message>
             </constraint>
+            <constraint
+                  class="org.openmodelica.modelicaml.validation.rules.classes.C48_SingleAssignmentRule"
+                  id="org.openmodelica.modelicaml.validation.C48"
+                  isEnabledByDefault="true"
+                  lang="Java"
+                  mode="Batch"
+                  name="C48_SingleAssignmentRule"
+                  severity="ERROR"
+                  statusCode="1">
+               <message>
+                  C48 {0}
+               </message>
+            </constraint>
+            <constraint
+                  class="org.openmodelica.modelicaml.validation.rules.classes.C49_AssignmentOfContVarsInStateMachines"
+                  id="org.openmodelica.modelicaml.validation.C49"
+                  isEnabledByDefault="true"
+                  lang="Java"
+                  mode="Batch"
+                  name="C49_ContVarsAssignedInStateMachines"
+                  severity="ERROR"
+                  statusCode="1">
+               <message>
+                  C49 {0}
+               </message>
+            </constraint>
          </constraints>
          <constraints
                categories="org.openmodelica.modelicaml.validation.live">
